# fast-rm

./: Cargo.toml  README.md
fast-rm/: Cargo.toml
fast-rm-cli/: Cargo.toml
fast-rm-cli/src/: main.rs
fast-rm/src/: lib.rs
