[package]
name = "fast-rm-cli"
version = "0.0.0"
authors = ["Thomas Kilian <Thomas-Kilian@gmx.net>"]
edition = "2021"
keywords = ["cli", "files", "delete", "remove"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fast-rm = { path ="../fast-rm", version = "0.0.0" }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "frm"
path = "src/main.rs"
