[package]
name = "fast-rm"
version = "0.0.0"
authors = ["Thomas Kilian <Thomas-Kilian@gmx.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["filesystem"]
keywords = ["cli", "files", "delete", "remove"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread", "fs"] }
